@@ -1,1 +1,0 @@
-index index.php index.html;
