@@ -1,1 +1,0 @@
-root PH_HTTPD_DOCUMENTROOT;
